--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -5,6 +5,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
+    
 
 env:
   CPM_SOURCE_CACHE: ${{ github.workspace }}/cpm-cache
